--- a/index.html
+++ b/index.html
@@ -3,22 +3,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <link rel="stylesheet" href="./fonts/Circular Std Book/styles.css">
-    <script type="text/javascript" src="main.js"></script>
+    <script type="module" src="./test.js"></script>
     <title>Background</title>
 </head>
 <body>
-    <div class="main-container">
-        <div class="background" id="first-background">
-            <div class="text">
-                UserName
-            </div>
-        </div>
-        <div class="background" id="second-background">
-            <div class="text">
-                UserName
-            </div>
-        </div>
-    </div>
+    <div id="main-container"></div>
 </body>
 </html>
