--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
     <script type="module" src="./test.js"></script>
-    <title>Background</title>
+    <title>Dynamic Background</title>
 </head>
 <body>
     <div id="main-container"></div>
