--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="stylesheet.css">
-    <script type="module" src="./test.js"></script>
+    <script type="module" src="./demo.js"></script>
     <title>Dynamic Background</title>
 </head>
 <body>
